mini feria backend version 1

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "build": "tsc",
-    "start": "node dist/app.js"
+    "start": "node dist/app.js",
+    "init:db": "ts-node scripts/initDb.ts",
+    "super-admin": "ts-node scripts/seedSuperAdmin.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,12 +17,15 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "pg": "^8.16.0"
+    "multer": "^2.0.1",
+    "pg": "^8.16.0",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -28,6 +33,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.10",
+    "@types/multer": "^1.4.13",
     "@types/node": "^24.0.1",
     "@types/pg": "^8.15.4",
     "ts-node": "^10.9.2",
